--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="#">
 
     <title>Mon Lecteur Audio</title>
-    <script type="module" src="./myComponents/index.js"></script>
+    <script type="module" src="./myComponents/index.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-<my-audioplayer src="'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3"></my-audioplayer>
+<my-audioplayer  crossorigin="anonymous" src="'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3"></my-audioplayer>
 </body>
 </html>
