--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+    <meta name="referrer" content="origin" referrerpolicy="origin" />
+
 
     <title>Mon Lecteur Audio</title>
     <script type="module" src="./myComponents/index.js" crossorigin="anonymous"></script>
